--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Images Spot - Kishore S R</title>
+    <meta name="description" content="Search and explore images with ease using Images Spot. Find high-quality images from Unsplash.">
+    <meta name="keywords" content="image search, Unsplash, image exploration, web application">
+    <meta name="author" content="Kishore S R">
 
     <link rel="shortcut icon" href="https://play-lh.googleusercontent.com/r17fmz1oa9HAPIsoZLacBKi_0oaRXReg6JJHZjHsPS9sutPuuS7XzQw2iXwLZqSoquE" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
